--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,11 @@
     "type": "library",
     "require": {
         "php": ">=5.6",
-        "predis/predis": "1.0.*"
+        "predis/predis": "v2.0.*"
     },
     "require-dev": {
-        "symfony/http-foundation": "3.2.2",
-        "symfony/http-kernel": "3.3.2"
+        "symfony/http-foundation": "5.4.*",
+        "symfony/http-kernel": "5.4.*"
     },
     "license": "MIT",
     "authors": [
